// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppIcon> renders app icon 1`] = `
<AppIcon__Wrapper
  className="small ios"
>
  <AppIcon__Icon
    alt=""
    height=""
    src="/static/logo.png"
    width=""
  />
</AppIcon__Wrapper>
`;

exports[`<AppIcon> renders app icon with store icon 1`] = `
<AppIcon__Wrapper
  className="medium ios"
>
  <AppIcon__Icon
    alt=""
    height=""
    src="/static/logo.png"
    width=""
  />
  <AppIcon__StoreOverlay>
    <AppIcon__StoreIcon
      type="ios"
    />
  </AppIcon__StoreOverlay>
</AppIcon__Wrapper>
`;

exports[`<Flag> render flag icon 1`] = `
<AppIcon__Image
  alt=""
  height={11}
  src="/static/flags/cn.gif"
  width={16}
/>
`;

exports[`<Flag> render world wide flag 1`] = `
<AppIcon__Image
  alt=""
  height={32}
  src="/static/flags/ww.gif"
  width={32}
/>
`;

exports[`<StoreIcon> render app store icon 1`] = `
<i
  className="AppIcon__StoreIcon-s47nqcq-4 egjfHP"
  type="android"
/>
`;

exports[`<StoreIcon> render app store icon 2`] = `
<i
  className="AppIcon__StoreIcon-s47nqcq-4 gzjNCJ"
  size="16px"
  type="android"
/>
`;
